# example-llm

./: README.md  pyproject.toml
notebook/: 00. setup.ipynb  02. Prompt.ipynb  03. Pydantic Parser.ipynb  04. Model Caching.ipynb
