[tool.poetry]
name = "example-rag-ollama"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11.0"
ollama = "^0.4.2"
ipykernel = "^6.29.5"
langchain = "^0.3.9"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
